--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel1.jpeg" alt="">
           <div class="carousel-container">
             <h2>Phycotech<br>Proteínas inteligentes, soluciones sostenibles</h2>
             <p>Buscamos revolucionar la producción de proteínas recombinantes en la industria mediante el uso de microalgas como plataforma biotecnológica</p>
@@ -108,7 +108,7 @@
           </div>
         </div--><!-- End Carousel Item -->
 
-        <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
+        <!--a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
         </a>
 
@@ -116,7 +116,7 @@
           <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
         </a>
 
-        <ol class="carousel-indicators"></ol>
+        <ol class="carousel-indicators"></ol-->
 
       </div>
 
