--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo2.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -53,8 +53,8 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Phycotech</h1>
+          <img src="assets/img/long-logo.png" alt="">
+          <!-- <h1 class="sitename">Phycotech</h1> -->
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -84,7 +84,7 @@
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel1.jpeg" alt="">
           <div class="carousel-container">
-            <h2>Phycotech<br>Proteínas inteligentes, soluciones sostenibles</h2>
+            <h2><img style="max-height: 80px; max-width: 100%;" src="assets/img/long-logo-white.png" alt=""><br>Proteínas inteligentes, soluciones sostenibles</h2>
             <p>Buscamos revolucionar la producción de proteínas recombinantes en la industria mediante el uso de microalgas como plataforma biotecnológica</p>
             <a href="#featured-services" class="btn-get-started">Nuestra tecnología</a>
           </div>
@@ -518,7 +518,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Phycotech</span>
+            <span class="sitename"><img src="assets/img/long-logo-white.png" alt=""></span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
