--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css?v1" rel="stylesheet">
 
 </head>
 
@@ -200,7 +200,9 @@
 
     <!-- Clients Section -->
     <section id="clients" class="clients section light-background">
-
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Apoyados por</h2>
+      </div><!-- End Section Title -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="swiper init-swiper">
