--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="carousel-item active">
           <!--img src="assets/img/hero-carousel/hero-carousel1.jpeg" alt=""-->
-          <video autoplay loop muted playsinline style="width: 100%; height: auto;">
+          <video autoplay loop muted playsinline>
             <source src="assets/video.mp4" type="video/mp4">
             Tu navegador no soporta videos HTML5.
           </video>
