--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css?v11" rel="stylesheet">
+  <link href="assets/css/main.css?v12" rel="stylesheet">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://www.phycotech.bio/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Phycotech">
+  <meta property="og:description" content="Proteínas inteligentes, soluciones sostenibles">
+  <meta property="og:image" content="https://www.phycotech.bio/assets/img/logo.jpeg">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="phycotech.bio">
+  <meta property="twitter:url" content="https://www.phycotech.bio/">
+  <meta name="twitter:title" content="Phycotech">
+  <meta name="twitter:description" content="Proteínas inteligentes, soluciones sostenibles">
+  <meta name="twitter:image" content="https://www.phycotech.bio/assets/img/logo.jpeg">
 
 </head>
 
@@ -52,7 +66,7 @@
     <div class="branding d-flex align-items-cente">
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
+        <a href="https://www.phycotech.bio/" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <img src="assets/img/logo2.jpg" alt="" loading="lazy">
           <!-- <h1 class="sitename" data-en="Phycotech" data-es="Phycotech">Phycotech</h1> -->
@@ -89,7 +103,6 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <!--img src="assets/img/hero-carousel/hero-carousel1.jpeg" alt=""-->
           <video autoplay loop muted playsinline preload="auto">
             <source src="assets/video.mp4" type="video/mp4">
             <span data-en="Your browser does not support HTML5 videos." data-es="Tu navegador no soporta videos HTML5.">Tu navegador no soporta videos HTML5.</span>
@@ -499,7 +512,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-9 col-md-12 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="https://www.phycotech.bio/" class="logo d-flex align-items-center">
             <span class="sitename"><img src="assets/img/long-logo-white.png" alt="" loading="lazy"></span>
           </a>
           <p data-en="Smart proteins, sustainable solutions" data-es="Proteínas inteligentes, soluciones sostenibles">Proteínas inteligentes, soluciones sostenibles</p>
@@ -538,7 +551,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js?v11"></script>
+  <script src="assets/js/main.js?v12"></script>
 
   <!-- Language Switcher Script -->
   <script>
